[package]
name = "rdkafka-wrap"
version = "0.1.2"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "rdkafka wrap"
keywords = ["kafka", "kafka-cli", "rdkafka", "rdkafka-wrap", "kafka-wrap"]
readme = "README.md"
categories = ["api-bindings"]
repository = "https://github.com/baoyachi/rdkafka-wrap"
documentation = "https://docs.rs/rdkafka-wrap"
homepage = "https://github.com/baoyachi/rdkafka-wrap"
license = "Apache-2.0"
exclude = [".github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rdkafka = "0.33.0"
log = "0.4.18"
anyhow = "1.0.71"
thiserror = "1.0.47"
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
simple-log = "1.6.0"
totems = "0.2.7"

