[package]
name = "rdkafka-wrap"
version = "0.1.10"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "rdkafka wrap"
keywords = ["kafka", "kafka-cli", "rdkafka", "rdkafka-wrap", "kafka-wrap"]
readme = "README.md"
categories = ["api-bindings"]
repository = "https://github.com/baoyachi/rdkafka-wrap"
documentation = "https://docs.rs/rdkafka-wrap"
homepage = "https://github.com/baoyachi/rdkafka-wrap"
license = "Apache-2.0"
exclude = [".github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rdkafka = "0.33.0"
log = "0.4.18"
anyhow = "1.0.71"
thiserror = "1.0.47"
async-trait = "0.1.73"
serde = {version = "1.0.188",features = ["derive"]}
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
simple-log = "1.6.0"

[features]
default = ["rdkafka/default"]
naive-runtime = ["rdkafka/naive-runtime"]
cmake-build = ["rdkafka/cmake-build"]
cmake_build = ["rdkafka/cmake_build"]
dynamic-linking = ["rdkafka/dynamic-linking"]
dynamic_linking = ["rdkafka/dynamic_linking"]
ssl = ["rdkafka/ssl"]
ssl-vendored = ["rdkafka/ssl-vendored"]
gssapi = ["rdkafka/gssapi"]
gssapi-vendored = ["rdkafka/gssapi-vendored"]
sasl = ["rdkafka/sasl"]
libz = ["rdkafka/libz"]
libz-static = ["rdkafka/libz-static"]
curl = ["rdkafka/curl"]
curl-static = ["rdkafka/curl-static"]
zstd = ["rdkafka/zstd"]
zstd-pkg-config = ["rdkafka/zstd-pkg-config"]
external-lz4 = ["rdkafka/external-lz4"]
external_lz4 = ["rdkafka/external_lz4"]

